--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,23 +6,73 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+
+
+
 
     <tech.aerocube.rulerheightpicker.views.AeroRulerHeightPicker
-        android:id="@+id/heightpicker"
-        android:layout_height="500dp"
-        android:layout_width="100dp"
+        android:id="@+id/myScrollingValuePicker"
+        android:layout_width="84dp"
+        app:min_value="100"
+        app:max_value="250"
+        app:value_multiple="5"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        android:layout_height="500dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:background="#00FFFFFF" />
 
-    </tech.aerocube.rulerheightpicker.views.AeroRulerHeightPicker>
+
+
+    <RelativeLayout
+        android:id="@+id/container"
+        android:layout_height="200dp"
+        android:layout_width="200dp"
+        app:layout_constraintEnd_toStartOf="@id/myScrollingValuePicker"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@id/myScrollingValuePicker">
+
+
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/rulerview_value"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@id/indicator"
+        app:layout_constraintStart_toStartOf="@id/container"
+        app:layout_constraintEnd_toEndOf="@id/container"
+        android:gravity="center"
+        android:padding="4dp"
+        android:fontFamily="sans-serif-medium"
+        android:textColor="@color/purple_700"
+        android:textSize="24sp" />
+
+    <View
+        android:id="@+id/indicator"
+        android:layout_width="0dp"
+        android:layout_height="2dp"
+        app:layout_constraintStart_toStartOf="@id/container"
+        app:layout_constraintTop_toTopOf="@id/container"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@color/purple_700"/>
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/height"
+        android:adjustViewBounds="true"
+        app:layout_constraintTop_toBottomOf="@id/indicator"
+        app:layout_constraintStart_toStartOf="@id/container"
+        app:layout_constraintEnd_toEndOf="@id/container"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/indicator"/>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
