--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,10 @@
         android:layout_width="84dp"
         app:min_value="100"
         app:max_value="250"
-        app:value_multiple="5"
+        app:value_multiple="1"
+        app:value_type_multiple="12"
         app:ruler_multiple_size="2.0"
+        app:matric="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
